my-apps/media/karakeep/karakeep/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep-web
spec:
  selector:
    app: karakeep-web
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
